Add test, also revert changes in TopLevelClass

--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,5 @@
 /core/mybatis-generator-systests-domtests/.settings
 /core/mybatis-generator-systests-domtests/target
 /.project
-/.idea
+.idea
 *.iml
